--- a/backend/package.json
+++ b/backend/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "ts-node-dev src/server.ts",
-    "build": "tsc"
+      "dev": "cd src && ts-node-dev server.ts",
+      "build": "tsc"   
   },
   "keywords": [],
   "author": "",
