--- a/backend/package.json
+++ b/backend/package.json
@@ -5,8 +5,9 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-      "start": "node build/server.js",
-      "build": "tsc"   
+    "dev": "ts-node-dev --transpile-only src/server.ts",
+    "start": "ts-node-dev --transpile-only src/server.ts",
+    "build": "tsc"   
   },
   "keywords": [],
   "author": "",
